:art: Update dir structure. Add some scripts.

--- a/apigen/templates/README.mustache
+++ b/apigen/templates/README.mustache
@@ -30,3 +30,20 @@ Once image is built use
 ```
 docker run --rm -it api
 ```
+
+## Other Useful Commands
+
+### Start API
+```sh
+make start
+```
+
+### Log Stream
+```sh
+make logs LEVEL=ERROR
+```
+
+### Show Last error details
+```sh
+make inspect
+```
