:wrench: Update templates.

--- a/apigen/templates/api.mustache
+++ b/apigen/templates/api.mustache
@@ -3,6 +3,7 @@
 package {{packageName}}
 
 import (
+	"context"
 	"net/http"{{#apiInfo}}{{#apis}}{{#imports}}
 	"{{import}}"{{/imports}}{{/apis}}{{/apiInfo}}
     "{{gitHost}}/{{gitUserId}}/{{gitRepoId}}/internal/model"
@@ -22,5 +23,5 @@ type {{classname}}Router interface { {{#operations}}{{#operation}}
 // while the service implementation can ignored with the .openapi-generator-ignore file 
 // and updated with the logic required for the API.
 type {{classname}}Servicer interface { {{#operations}}{{#operation}}
-	{{operationId}}({{#allParams}}{{^format}}model.{{/format}}{{dataType}}{{#hasMore}}, {{/hasMore}}{{/allParams}}) (interface{}, error){{/operation}}{{/operations}}
+	{{operationId}}(context.Context,{{#allParams}}{{^format}}model.{{/format}}{{dataType}}{{#hasMore}}, {{/hasMore}}{{/allParams}}) (interface{}, error){{/operation}}{{/operations}}
 }{{/apis}}{{/apiInfo}}
